COSMETIC: PMD warnings partially fixed